# TaskManagerAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0d2a4777551b_create_attachments_table.py  35c1ded174f3_add_tasks_table.py  3ab862c8cec4_init.py  46febd426f4b_fix_token_expires_at_timezone.py  470d06b0e879_fix_token_table.py  4ab358701191_add_attachments_table.py  4e41a946f5ae_fix_token_expires_at_timezone_x2.py  6175b4f7613c_add_cascade_delete_to_fk_constraints.py  7a342a761171_add_projects_table.py  85bbaa3a3d6c_add_workspace_tables.py  8aa7a58a0b78_add_tokens_table.py  a28239dc8f9e_add_comments_table.py  bf89eb16a59e_add_users_table.py
app/: celery_app.py  main.py  tasks.py
app/api/: deps.py
app/api/routers/: attachment.py  auth.py  comment.py  notifications.py  project.py  task.py  user.py  users.py  workspace.py
app/core/: cache.py  config.py  connection_manager.py  limiter.py  logger.py  s3.py  security.py
app/db/: session.py
app/models/: attachment.py  comment.py  project.py  task.py  token.py  user.py  workspace.py
app/repositories/: attachment.py  base.py  comment.py  project.py  task.py  token.py  user.py  workspace.py
app/schemas/: attachment.py  comment.py  project.py  task.py  user.py  workspace.py
app/services/: attachment.py  comment.py  project.py  task.py  user.py  workspace.py
tests/: conftest.py  test_auth.py  test_comment.py  test_project.py  test_task.py  test_users.py  test_workspace.py
